# timelineomat

./: .gitignore  README.md  pyproject.toml  timelineomat.py
.github/workflows/: test.yml
tests/: test_basics.py
