[project]
name = "timelineomat"
version = "0.1.2"
description = ""
authors = [{name = "Alexander Kaftan", email="devkral@web.de"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore= ["FA100"]

[tool.hatch.envs.hatch-test]
dependencies = ["faker", "pytest"]
installer = "pip"

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff"]
installer = "pip"
