[project]
name = "timelineomat"
version = "0.7.0"
description = "Squeeze events into timelines and other timeline manipulations"
authors = [{name = "Alexander Kaftan", email="devkral@web.de"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "event",
    "time",
    "timelines",
    "database",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore= ["FA100"]

[tool.hatch.envs.hatch-test]
dependencies = ["faker", "pytest"]
installer = "pip"

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff"]
installer = "pip"
